--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
+    "bcrypt": "^5.0.0",
     "mongoose": "^5.10.13",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -35,6 +36,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/mongoose": "^5.10.0",
