sign in sing up

--- a/errors.yml
+++ b/errors.yml
@@ -9,3 +9,4 @@
 0xE000008: 'user `password` is required'
 0xE000009: 'user `password` is invalid'
 0xE00000A: 'user `rote` is invalid'
+0xE00000B: 'invalid `email` or `password`'
